--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
   <main class="container">
     <section class="contact">
       <h1>Contact Me</h1>
-      <p>If you'd like to reach out, email me at <a href="mailto:you@example.com">you@example.com</a> or use the form below.</p>
+      <p>If you'd like to reach out, email me at <a href="mailto:dhyanidhvaj@gmail.com">you@example.com</a> or use the form below.</p>
 
       <form class="contact-form" action="#" method="post" aria-label="Contact form (non-functional demo)">
         <label>
